# screenfish

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
deploy/cloudflared/: README.md
deploy/systemd/: screenfish-docker.user.service  stock_screener-update.service  stock_screener-update.timer  stock_screener.service
src/stock_screener/: auth.py  cli.py  config.py  dates.py  formula_parser.py  indicators.py  names.py  pinyin.py  runner.py  server.py  tdx.py  tushare_client.py  update.py
src/stock_screener/backends/: sqlite_backend.py
src/stock_screener/providers/: __init__.py  baostock_provider.py  eastmoney_provider.py  tushare_provider.py
src/stock_screener/rules/: __init__.py  base.py  formula_rule.py  kdj_oversold.py  midline_ma60.py
tests/: test_baostock_provider.py  test_eastmoney_provider.py  test_formula_parser.py  test_indicators.py  test_rules.py  test_runner.py  test_server.py  test_tdx_ebk.py  test_update.py
