[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-screener"
version = "0.1.0"
description = "Offline A-share daily data updater + TDX-style indicator screener (data processing only)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "typer>=0.9",
  "pydantic>=2.0",
  "tushare>=1.3",
  "baostock>=0.8",
  "fastapi>=0.110",
  "uvicorn>=0.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "httpx>=0.26",
]

[project.scripts]
stock_screener = "stock_screener.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
